[gd_scene load_steps=2 format=3 uid="uid://d3w4w5g6h7j8h"]

[ext_resource type="Script" path="res://game_ui.gd" id="1_abcde"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abcde")

[node name="TimeLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Time: 60"
horizontal_alignment = 1

[node name="ResultPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResultLabel" type="Label" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 43.0
grow_horizontal = 2
text = "Run Completed!"
horizontal_alignment = 1

[node name="NewRunButton" type="Button" parent="ResultPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -40.0
offset_right = 50.0
grow_horizontal = 2
grow_vertical = 0
text = "Return to Main Menu"
